--- a/src/index.scss
+++ b/src/index.scss
@@ -1,3 +1,5 @@
+@import url("https://fonts.googleapis.com/css2?family=Outfit:wght@300;400;500;600;700&display=swap");
+
 *,
 *::before,
 *::after {
@@ -6,7 +8,32 @@
   box-sizing: border-box;
 }
 
-.main {
-  min-height: 100vh;
+body {
+  font-family: "Outfit", sans-serif;
   background-color: #100f0f;
+}
+
+.main {
+  min-height: 90vh;
+  max-width: 450px;
+  margin: 0 auto;
+  padding: 40px 20px;
+
+  h1 {
+    color: #f8f7f7;
+    text-align: center;
+    font-size: 1.3em;
+  }
+}
+
+footer {
+  color: #c6c3c3;
+  font-weight: 300;
+  text-align: center;
+  padding-top: 20px;
+
+  a {
+    color: #fff;
+    font-weight: 400;
+  }
 }
