--- a/src/index.scss
+++ b/src/index.scss
@@ -30,7 +30,7 @@ footer {
   color: #c6c3c3;
   font-weight: 300;
   text-align: center;
-  padding-top: 20px;
+  padding: 20px 0;
 
   a {
     color: #fff;
