--- a/src/components/Simulator/index.module.scss
+++ b/src/components/Simulator/index.module.scss
@@ -32,5 +32,12 @@
       color: #e4e2e2;
       font-weight: 300;
     }
+
+    .values {
+      color: #fff;
+      margin-top: 25px;
+      line-height: 1.5;
+      white-space: pre-wrap;
+    }
   }
 }
